# HexCore-Helix

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build_helper.bat  libmod.rlib  link_errors.txt  link_errors2.txt  log2.txt  log3.txt  package-lock.json  package.json  roadmap.md  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml
crates/helix-core/: Cargo.toml  build.rs
crates/helix-core/examples/: benchmark_flatbuf.rs  benchmark_logs.rs  compare_pipelines.rs  debug_parser.rs  decompile_log.rs  decompile_remill.rs  decompile_remill6.rs  test_mlir_v06.rs
crates/helix-core/src/: ast.rs  decompile.rs  diagnostics.rs  error.rs  ffi.rs  lib.rs  metrics.rs  signatures.rs  transforms.rs  types.rs
crates/helix-core/src/analysis/: calling_convention.rs  control_flow.rs  data_flow.rs  mod.rs  type_propagation.rs  validation.rs
crates/helix-core/src/flatbuf/: ast.rs  cfg.rs  mod.rs
crates/helix-core/src/ir/: hir.rs  hir_builder.rs  hir_emitter.rs  mod.rs  parser.rs  remill.rs
crates/helix-core/src/pipeline/: mod.rs  passes.rs  pseudoc_emitter.rs  remill_lifter.rs
crates/helix-core/tests/: abi_contract.rs  comparison.rs  output_quality.rs  proptest_generators.rs  remill_integration.rs
crates/hexcore-helix/: Cargo.toml  index.d.ts  index.js
crates/hexcore-helix/src/: engine.rs  lib.rs  transport.rs
engine/: CMakeLists.txt  build-helix.bat  output.txt  output_real.txt
engine/dialects/: HelixHighDialect.td  HelixHighOps.td  HelixHighTypes.td  HelixLowDialect.td  HelixLowOps.td  HelixLowTypes.td
engine/include/helix/: Engine.h  Pipeline.h  Types.h
engine/include/helix/analysis/: RemillDemangler.h  SignatureDb.h  X86RegisterInfo.h
engine/include/helix/dialects/: HelixHighDialect.h  HelixHighOps.h  HelixHighTypes.h  HelixLowDialect.h  HelixLowOps.h  HelixLowTypes.h
engine/include/helix/emit/: FlatBufSerializer.h  PseudoCEmitter.h
engine/include/helix/passes/: Passes.h
engine/src/: CApi.cpp  Engine.cpp  Pipeline.cpp
engine/src/analysis/: RemillDemangler.cpp  SignatureDb.cpp
engine/src/dialects/: HelixHighDialect.cpp  HelixHighOps.cpp  HelixLowDialect.cpp  HelixLowOps.cpp
engine/src/emit/: FlatBufSerializer.cpp  PseudoCEmitter.cpp
engine/src/passes/: EliminateDeadCode.cpp  Passes.cpp  PropagateTypes.cpp  RecoverCallingConvention.cpp  RecoverStackLayout.cpp  RecoverVariables.cpp  RemillToHelixLow.cpp  StructureControlFlow.cpp
engine/test/: CMakeLists.txt  EmitterTest.cpp  IntegrationPipelineTest.cpp  Remill6DemanglerTest.cpp  Remill6IntegrationTest.cpp  Remill7IntegrationTest.cpp  RemillDemanglerTest.cpp
engine/test/fixtures/: branch.ll  simple_add.ll  simple_call.ll
engine/tools/: helix_tool.cpp
schemas/: ast.fbs  cfg.fbs  common.fbs
signatures/: windows_crt_win32.csv
tests/Remill-1/: 01-camera-init.ll  01-hexcore.disasm.analyzeall.json  02-camera-init.c  hexcore-pipeline.status.json
tests/Remill-2/: 01-aim-assist-init.ll  01-hexcore.disasm.analyzeall.json  02-aim-assist-init.c  hexcore-pipeline.status.json
tests/Remill-3/: 01-hexcore.disasm.analyzeall.json  01-swarm-serialization.ll  02-swarm-serialization.c  03-swarm-serialization.helix.c  hexcore-pipeline.status.json
tests/Remill-4/: 01-hexcore.disasm.analyzeall.json  01-swarm-write.ll  02-swarm-write.c  hexcore-pipeline.status.json
tests/Remill-5/: 01-hexcore.disasm.analyzeall.json  01-name-writing.ll  02-name-writing.c  hexcore-pipeline.status.json
tests/remill-6/: 01-name-writing.ll  04-helix.c  05-helix-phase2.c  06-helix-rust.c  06-mlir-stderr-full.txt  06-mlir-stderr.txt  06-stderr.txt  err.txt  rellic.c  v06-test-log.txt
tests/remill-7/: bone3_err.txt  bone_pos_calc.c  bone_pos_calc2.helix.c  bone_pos_calc3.helix.c  bone_pos_calc3.ll  bone_pos_calc4.ll  bone_pos_calc6.ll  bone_pos_calc7.ll  bone_pos_calc9.helix.c  bone_pos_calc9.ll  projectile_constructor.ll  projectile_constructor2.helix.c  projectile_constructor2.ll
tests/reports/: README.md  baseline-2026-02-15.md  flatbuf-vs-json.md  helix-vs-rellic.md  latest.md  post-refactor-v2.md
