[workspace]
resolver = "2"
members = [
    "crates/helix-core",
    "crates/hexcore-helix",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/YukiHekmatyar/HexCore-Helix"

[workspace.dependencies]
# Core
thiserror = "2.0.18"
bitflags = "2.11.0"
flatbuffers = "25.12.19"

# NAPI-RS
napi = { version = "3.8.3", features = ["napi9", "serde-json"] }
napi-derive = "3.5.2"

# Internal
helix-core = { path = "crates/helix-core" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1
