[package]
name = "helix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and FFI boundary for the HexCore Helix decompilation engine"

[dependencies]
thiserror = { workspace = true }
bitflags = { workspace = true }
flatbuffers = { workspace = true }

[build-dependencies]
cc = "1"
cmake = "0.1"

[dev-dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
